<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:elevation="1dp"
        app:titleTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Identification"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="32dp"
            android:textSize="16sp"/>


        <TextView
            android:id="@+id/tv_status"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/red"
            android:text="0"
            android:textSize="16sp"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </com.google.android.material.appbar.MaterialToolbar>



    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



    <androidx.cardview.widget.CardView
        android:id="@+id/rd_card"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="24dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="18dp"
            android:layout_marginTop="16dp"
            android:text="Sync Data"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center|end"
            android:background="@drawable/tick"
            android:layout_marginEnd="18dp"/>
    </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/push_card"
                android:layout_width="140dp"
                android:layout_height="52dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="24dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="16dp"
                    android:text="Push Data"/>
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center|end"
                    android:background="@drawable/cloud_computing"
                    android:layout_marginEnd="18dp"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_chaneUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="24dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="18dp"
                android:text="Change Url"/>

            <ImageView
                android:id="@+id/backup"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_gravity="end|center"
                android:layout_marginEnd="18dp"
                android:src="@drawable/ipconfig"/>
        </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="140dp"
        android:layout_marginBottom="24dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spType"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/spinner_bg"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"/>

<!--            <RadioGroup-->
<!--                android:layout_marginTop="16dp"-->
<!--                android:layout_marginBottom="16dp"-->
<!--                android:id="@+id/groupradio"-->
<!--                android:orientation="horizontal"-->
<!--                android:layout_marginLeft="10dp"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content">-->

<!--                &lt;!&ndash; In RadioGroup create the 1 Radio Button&ndash;&gt;-->
<!--                &lt;!&ndash; like this we will add some more Radio Button&ndash;&gt;-->
<!--                <RadioButton-->
<!--                    android:layout_width="160dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:id="@+id/radio_luch"-->
<!--                    android:text="Lunch"-->
<!--                    android:textSize="20sp"/>-->

<!--                <RadioButton-->
<!--                    android:layout_width="fill_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:id="@+id/radio_dinner"-->
<!--                    android:layout_marginStart="16sp"-->
<!--                    android:text="Dinner"-->
<!--                    android:textSize="20sp"/>-->

<!--            </RadioGroup>-->


        </LinearLayout>


    </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginTop="150dp"
            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:layout_constraintBottom_toTopOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">



            <TextView
                android:id="@+id/animatedText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:text="Event Management"
                android:textColor="@color/blue"
                android:textSize="32sp"
                android:textStyle="bold"
                 />
            </androidx.cardview.widget.CardView>
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/saash_logo"
                android:gravity="bottom"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_gravity="bottom">








            <ImageView
                android:id="@+id/im_authorize"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                android:src="@drawable/ic_baseline_person_24"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:text="@string/mudit_srivastava"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:visibility="gone"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:layout_marginStart="16dp"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:visibility="gone"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chapter_name"
                            android:layout_marginTop="8dp"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/category"
                            android:layout_marginTop="8dp"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/company_name"
                            android:layout_marginTop="8dp"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone_number"
                            android:layout_marginTop="8dp"

                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:layout_marginTop="8dp"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/status"
                            android:layout_marginTop="8dp"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="16sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Solitaires"
                            android:layout_marginTop="8dp"
                            android:textColor="@color/gray"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Loan"
                            android:layout_marginTop="8dp"
                            android:textColor="@color/gray"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Poxo RFID Automation"
                            android:layout_marginTop="8dp"
                            android:layout_gravity="center"
                            android:textColor="@color/gray"
                            android:textSize="16sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="777777777"
                            android:layout_marginTop="8dp"
                            android:textColor="@color/gray"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="xyz@gmail.com"
                            android:layout_marginTop="8dp"
                            android:textColor="@color/gray"
                            android:textSize="16sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Unauthorized"
                            android:textSize="12sp"
                            android:layout_marginTop="8dp"
                            android:padding="2pt"
                            android:textColor="@color/white"
                            android:background="@drawable/bg_box" />
                    </LinearLayout>



                </LinearLayout>



            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>